# Projet-INF8702

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
models/: Aquarium.mtl  BigFanShell.mtl  Pot.mtl  README.md  SandDollar.mtl  pirate.mtl
models/Aquarium/: Aquarium.mtl
models/Coral/: CoralGreen.mtl  CoralPink.mtl  CoralRed.mtl
models/Ground/: Ground.blend  Ground.fbx  Ground.mtl
models/Pot/: Pot.mtl
models/Sand/: Sand.blend  Sand.mtl
models/Shells/: BigFanShell.mtl  SmallFanShell.mtl  SpiralShell.blend  SpiralShell.blend1  SpiralShell.mtl
models/StarFish/: StarFish.mtl
report/: ijcai19.bib  ijcai19.tex
report/code/: celshading.cpp  celshading.glsl  radial-darkening.glsl  wobbling-effect.glsl
shaders/: camera.fs  camera.vs  caustics.fs  caustics.vs  dilate.fs  erode.fs  post_processing.fs  post_processing.vs  shadow.vs  triangle.fs  triangle.vs  underwater.fs  underwater.vs
src/: animated_texture.cpp  animated_texture.h  caustics.cpp  caustics.h  cube.cpp  cube.h  dilation.cpp  dilation.h  erosion.cpp  erosion.h  model.cpp  model.h  morph_smoothing.cpp  morph_smoothing.h  post_processing.cpp  post_processing.h  scene.cpp  scene.h  screen_pass.cpp  screen_pass.h  shadowmap.cpp  shadowmap.h  stb_impl.cpp  texture.cpp  texture.h  transform.cpp  transform.h  underwater.cpp  underwater.h
textures/water_height/: ocean_model.blend  ocean_model.blend1
utils/: camera.h  constants.h  mesh.h  model.h  options.cpp  options.h  scene.h  shader.cpp  shader.h  shader_reader.h
